src/objects/Charket__WeChatMenu__c.object
<CustomObject>
    <fields>
        <fullName>Charket__PublishDate__c</fullName>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Menus</relationshipLabel>
        <relationshipName>WeChatMenus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMenuFilters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Menu Filters</label>
        <referenceTo>Charket__WeChatMenuFilters__c</referenceTo>
        <relationshipLabel>WeChat Menus</relationshipLabel>
        <relationshipName>WeChatMenus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMenuId__c</fullName>
        <label>WeChat Menu ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WeChat Menu</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Menus</pluralLabel>
    <recordTypes>
        <fullName>Charket__CustomMenu</fullName>
        <active>true</active>
        <description>Generate custom menu for special followers.</description>
        <label>Custom Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Charket__DefaultMenu</fullName>
        <active>true</active>
        <description>The default WeChat menu</description>
        <label>Default Menu</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>